force-app/main/default/objects/Forecast_Display_Field__c/Forecast_Display_Field__c.object-meta.xml
<CustomObject>
    <label>Forecast Display Field</label>
    <pluralLabel>Forecast Display Fields</pluralLabel>
    <nameField>
        <label>Display Field Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>