force-app/main/default/objects/Forecast_Display_Field__c/fields/Column_Width__c.field-meta.xml
<CustomField>
    <fullName>Column_Width__c</fullName>
    <label>Column Width</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Narrow</fullName><default>false</default><label
        >Narrow</label></value>
            <value><fullName>Medium</fullName><default>true</default><label
        >Medium</label></value>
            <value><fullName>Wide</fullName><default>false</default><label
        >Wide</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>