force-app/main/default/objects/Forecast_Display_Field__c/fields/Display_Location__c.field-meta.xml
<CustomField>
    <fullName>Display_Location__c</fullName>
    <label>Display Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Main_Grid</fullName><default>true</default><label
        >Main Grid</label></value>
            <value><fullName>Expanded_Detail</fullName><default
        >false</default><label>Expanded Detail</label></value>
            <value><fullName>Both</fullName><default>false</default><label
        >Both</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>