force-app/main/default/objects/Forecast_Display_Field__c/fields/Forecast_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Configuration__c</fullName>
    <label>Forecast Configuration</label>
    <referenceTo>Forecast_Configuration__c</referenceTo>
    <relationshipName>Forecast_Display_Fields</relationshipName>
    <relationshipLabel>Forecast Display Fields</relationshipLabel>
    <type>Lookup</type>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>