force-app/main/default/objects/Forecast_Display_Field__c/fields/Is_System__c.field-meta.xml
<CustomField>
    <fullName>Is_System__c</fullName>
    <label>Is System</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>